<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_f3f3f3">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/round_rectangle_2"
        android:padding="20dp">
        //本月支出
        <TextView
            android:id="@+id/item_mainlv_top_tv1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/month_out"
            />
        //支出数据
        <TextView
            android:id="@+id/item_mainlv_top_tv_out"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zero"
            android:layout_below="@+id/item_mainlv_top_tv1"
            android:textSize="26sp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:textColor="@color/black"
            />
        //隐藏
        <ImageView
            android:id="@+id/item_mainlv_top_iv_hide"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_alignParentRight="true"
            android:src="@mipmap/ih_show"
            android:layout_alignTop="@+id/item_mainlv_top_tv_out"
            android:adjustViewBounds="true"
            />
        //本月收入
        <TextView
            android:id="@+id/item_mainlv_top_tv2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/month_in"
            android:layout_below="@+id/item_mainlv_top_tv_out"
            />
        //收入数据
        <TextView
            android:id="@+id/item_mainlv_top_tv_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/zero"
            android:layout_below="@+id/item_mainlv_top_tv_out"
            android:layout_toRightOf="@id/item_mainlv_top_tv2"
            android:layout_marginLeft="5dp"
            />
        //预算剩余
        <TextView
            android:id="@+id/item_mainlv_top_tv3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/budget"
            android:layout_toLeftOf="@+id/item_mainlv_top_tv_budget"
            android:layout_alignBottom="@+id/item_mainlv_top_tv2"
            />
        //预算数据
        <TextView
            android:id="@+id/item_mainlv_top_tv_budget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zero"
            android:textColor="@color/black"
            android:layout_alignParentRight="true"
            android:layout_alignBottom="@+id/item_mainlv_top_tv2"
            android:layout_marginLeft="5dp"
            />
        //图表
        <!--<TextView
            android:id="@+id/item_mainlv_top_tv4"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:drawableLeft="@android:drawable/ic_menu_sort_by_size"
            android:layout_below="@id/item_mainlv_top_tv2"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="@string/excel"
            android:textSize="15sp"
            android:drawablePadding="10dp"
            />-->
    </RelativeLayout>
    <TextView
        android:id="@+id/item_mainlv_top_tv_day"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="今日支出 ¥ 0.00  收入 ¥ 0.00"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        />

</LinearLayout>